--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "webpack-dev-server --port 9000 --inline --progress --profile --colors --watch --content-base src/ --mode development",
     "build": "webpack --config webpack.config.js --mode production"
   },
-  "dependencies": {},
+  "dependencies": {
+    "svg-parser": "^2.0.4"
+  },
   "devDependencies": {
+    "@types/svg-parser": "^2.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "source-map-loader": "^1.1.0",
     "typescript": "^4.0.3",
