--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,14 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "strict": true,
-    "lib": ["DOM", "ESNext"]
+    "lib": ["DOM", "ESNext"],
+    "declaration": true,
+    "target": "es5",
+    "module": "commonjs",
+    "rootDir": "src",
+    "types": ["node"],
+    "resolveJsonModule": true,
+    "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["src", "@types"]
 }
