--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@graphize/anim-engine",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "keywords": [
@@ -21,11 +21,6 @@
   },
   "devDependencies": {
     "@types/svg-parser": "^2.0.1",
-    "awesome-typescript-loader": "^5.2.1",
-    "source-map-loader": "^1.1.0",
-    "typescript": "^4.0.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "typescript": "^4.0.3"
   }
 }
