--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@graphize/anim-engine",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
   "keywords": [
@@ -17,9 +17,11 @@
   },
   "dependencies": {
     "flubber": "^0.4.2",
+    "mathjs": "^7.5.1",
     "svg-parser": "^2.0.4"
   },
   "devDependencies": {
+    "@types/mathjs": "^6.0.6",
     "@types/svg-parser": "^2.0.1",
     "typescript": "^4.0.3"
   }
