--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "prepare": "yarn build"
   },
   "dependencies": {
+    "color-convert": "^2.0.1",
     "flubber": "^0.4.2",
+    "lodash.clonedeep": "^4.5.0",
     "mathjs": "^7.5.1",
     "svg-parser": "^2.0.4"
   },
   "devDependencies": {
+    "@types/color-convert": "^1.9.0",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/mathjs": "^6.0.6",
     "@types/svg-parser": "^2.0.1",
     "typescript": "^4.0.3"
